2010-09-20  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by James Robinson.

        [chromium] Making destructors of LayerChromium and ContentLayerChromium virtual
        so that the derived class' destructor code gets called.
        https://bugs.webkit.org/show_bug.cgi?id=46139

        * platform/graphics/chromium/ContentLayerChromium.h:
        * platform/graphics/chromium/LayerChromium.h:


Canonical link: https://commits.webkit.org/58611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67906 268f45cc-cd09-0410-ab3c-d52691b4dbfc